--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
+    "@types/i18next": "^13.0.0",
     "@types/parallax-js": "^3.1.0",
     "antd": "^5.4.6",
     "classnames": "^2.3.2",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "parallax-js": "^3.1.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-type-animation": "^3.0.1",
     "sass": "^1.62.1"
